--- a/tech-stack.html
+++ b/tech-stack.html
@@ -64,13 +64,6 @@
           <div class="top-highlight"></div>
           <!-- drop down content -->
           <h6>Follow Me</h6>
-          <a href="https://x.com" target="_blank" class="social-icon">
-            <img
-              src="web_portfolio_images/SVGs/x_icon_white.svg"
-              alt="X (Twitter)"
-            />
-            X
-          </a>
           <a
             href="https://github.com/Kscopee"
             target="_blank"
@@ -134,84 +127,114 @@
     <!-- main content -->
     <main class="main-content">
       <!-- ===== TECH STACK ===== -->
-      <section id="tech-stack" class="section">
+      <section id="tech-stack" class="section container-fluid">
         <!-- title -->
-        <h2 class="skills-title">Tech Stack</h2>
+        <h2 class="skills-title text-center">Tech Stack</h2>
 
         <!-- skill toggle -->
-        <div class="skill-switcher">
-          <button class="skill-toggle active" data-type="technical">
-            Technical
-          </button>
-          <button class="skill-toggle" data-type="soft">Soft</button>
+        <div class="skill-switcher d-flex justify-content-center mb-4">
+          <div class="btn-group" role="group" aria-label="Skill categories">
+            <button class="skill-toggle active" data-type="technical">
+              Technical
+            </button>
+            <button class="skill-toggle" data-type="soft">Soft</button>
+          </div>
         </div>
 
         <!-- skills grid -->
         <div class="skills-grid">
           <!-- technical skills -->
           <div class="skill-section technical" data-active="true">
-            <div class="skill-grid">
-              <div class="skill-item">
-                <img
-                  src="web_portfolio_images/SVGs/html_logo.svg"
-                  alt="HTML logo"
-                />
-                <h4>HTML</h4>
+            <div
+              class="skill-grid row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4"
+            >
+              <div class="col">
+                <div class="skill-item d-flex flex-column align-items-center">
+                  <img
+                    src="web_portfolio_images/SVGs/html_logo.svg"
+                    alt="HTML logo"
+                    class="mb-3"
+                  />
+                  <h4 class="mb-0">HTML</h4>
+                </div>
               </div>
-              <div class="skill-item">
-                <img
-                  src="web_portfolio_images/SVGs/css_logo.svg"
-                  alt="CSS logo"
-                />
-                <h4>CSS</h4>
+              <div class="col">
+                <div class="skill-item d-flex flex-column align-items-center">
+                  <img
+                    src="web_portfolio_images/SVGs/css_logo.svg"
+                    alt="CSS logo"
+                    class="mb-3"
+                  />
+                  <h4 class="mb-0">CSS</h4>
+                </div>
               </div>
-              <div class="skill-item">
-                <img
-                  src="web_portfolio_images/SVGs/javascript_logo.svg"
-                  alt="JavaScript logo"
-                />
-                <h4>JavaScript</h4>
+              <div class="col">
+                <div class="skill-item d-flex flex-column align-items-center">
+                  <img
+                    src="web_portfolio_images/SVGs/javascript_logo.svg"
+                    alt="JavaScript logo"
+                    class="mb-3"
+                  />
+                  <h4 class="mb-0">JavaScript</h4>
+                </div>
               </div>
-              <div class="skill-item">
-                <img
-                  src="web_portfolio_images/SVGs/java_logo.svg"
-                  alt="Java logo"
-                />
-                <h4>Java</h4>
+              <div class="col">
+                <div class="skill-item d-flex flex-column align-items-center">
+                  <img
+                    src="web_portfolio_images/SVGs/java_logo.svg"
+                    alt="Java logo"
+                    class="mb-3"
+                  />
+                  <h4 class="mb-0">Java</h4>
+                </div>
               </div>
             </div>
           </div>
 
           <!-- soft skills -->
           <div class="skill-section soft" data-active="false">
-            <div class="skill-grid">
-              <div class="skill-item">
-                <img
-                  src="web_portfolio_images/SVGs/communication_icon.svg"
-                  alt="Communication icon"
-                />
-                <h4>Communication</h4>
+            <div
+              class="skill-grid row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4"
+            >
+              <div class="col">
+                <div class="skill-item d-flex flex-column align-items-center">
+                  <img
+                    src="web_portfolio_images/SVGs/communication_icon.svg"
+                    alt="Communication icon"
+                    class="mb-3"
+                  />
+                  <h4 class="mb-0">Communication</h4>
+                </div>
               </div>
-              <div class="skill-item">
-                <img
-                  src="web_portfolio_images/SVGs/creativity_icon.svg"
-                  alt="Creativity icon"
-                />
-                <h4>Creativity</h4>
+              <div class="col">
+                <div class="skill-item d-flex flex-column align-items-center">
+                  <img
+                    src="web_portfolio_images/SVGs/creativity_icon.svg"
+                    alt="Creativity icon"
+                    class="mb-3"
+                  />
+                  <h4 class="mb-0">Creativity</h4>
+                </div>
               </div>
-              <div class="skill-item">
-                <img
-                  src="web_portfolio_images/SVGs/organization.svg"
-                  alt="Organization icon"
-                />
-                <h4>Organization</h4>
+              <div class="col">
+                <div class="skill-item d-flex flex-column align-items-center">
+                  <img
+                    src="web_portfolio_images/SVGs/organization.svg"
+                    alt="Organization icon"
+                    class="mb-3"
+                  />
+                  <h4 class="mb-0">Organization</h4>
+                </div>
               </div>
-              <div class="skill-item">
-                <img
-                  src="web_portfolio_images/SVGs/dedication_icon.svg"
-                  alt="Dedication icon"
-                />
-                <h4>Dedication</h4>
+              <div class="col">
+                <div class="skill-item d-flex flex-column align-items-center">
+                  <img
+                    src="web_portfolio_images/SVGs/dedication_icon.svg"
+                    alt="Dedication icon"
+                    class="mb-3"
+                  />
+                  <h4 class="mb-0">Dedication</h4>
+                </div>
               </div>
             </div>
           </div>
