--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashton James | Home</title>
-    <!-- CSS files -->
-    <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/header-nav.css" />
-    <link rel="stylesheet" href="css/home.css" />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- CSS files -->
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/header-nav.css" />
+    <link rel="stylesheet" href="css/home.css" />
     <!-- favicon -->
     <link
       rel="icon"
@@ -55,13 +55,17 @@
       <!-- quote -->
       <div class="quote">Turn your idyllic fantasy into digital reality</div>
       <!-- socials -->
-      <div class="socials">
+      <div class="socials dropdown">
         <img
           id="socials-logo"
           src="web_portfolio_images/SVGs/socials_icon.svg"
           alt="Socials logo"
+          class="dropdown-toggle"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
         />
-        <div class="socials-dropdown">
+        <div class="dropdown-menu socials-dropdown">
           <div class="top-highlight"></div>
           <!-- drop down content -->
           <h6>Follow Me</h6>
@@ -93,8 +97,8 @@
 
     <!-- left navbar -->
     <nav class="vertical-nav" aria-label="Main Navigation">
-      <ul>
-        <li>
+      <ul class="nav">
+        <li class="nav-item">
           <a href="index.html" class="nav-link active" data-tooltip="Home">
             <img
               src="web_portfolio_images/SVGs/home_icon_white.svg"
@@ -102,7 +106,7 @@
             />
           </a>
         </li>
-        <li>
+        <li class="nav-item">
           <a href="about.html" class="nav-link" data-tooltip="About">
             <img
               src="web_portfolio_images/SVGs/person_icon_white.svg"
@@ -110,7 +114,7 @@
             />
           </a>
         </li>
-        <li>
+        <li class="nav-item">
           <a href="tech-stack.html" class="nav-link" data-tooltip="Tech Stack">
             <img
               src="web_portfolio_images/SVGs/stack_icon_white.svg"
@@ -191,7 +195,13 @@
               <h4>A UI/UX Designer & Front End Developer</h4>
             </div>
             <div class="contact-info">
-              <button class="connect-button">Connect with me</button>
+              <button
+                class="connect-button"
+                data-bs-toggle="modal"
+                data-bs-target="#emailModal"
+              >
+                Connect with me
+              </button>
             </div>
           </div>
         </div>
